[package]
name = "agiworkforce-config"
version = "0.1.0"
edition = "2024"

[dependencies]
agiworkforce-app-server-protocol = { path = "../agiworkforce-app-server-protocol" }
agiworkforce-execpolicy = { path = "../agiworkforce-execpolicy" }
agiworkforce-file-system = { path = "../agiworkforce-file-system" }
agiworkforce-network-proxy = { path = "../agiworkforce-network-proxy" }
agiworkforce-protocol = { path = "../agiworkforce-protocol" }
agiworkforce-utils-absolute-path = { path = "../agiworkforce-utils-absolute-path" }
anyhow = "1"
futures = { version = "0.3", default-features = false, features = ["alloc", "std"] }
multimap = "0.10.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_path_to_error = "0.1.20"
sha2 = "0.10"
thiserror = "2.0.17"
tokio = { version = "1", features = ["fs"] }
toml = "0.9.5"
toml_edit = "0.24.0"
tracing = "0.1.44"

[dev-dependencies]
anyhow = "1"
pretty_assertions = "1.4.1"
tokio = { version = "1", features = ["full"] }
