[package]
name = "agiworkforce-connectors"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
agiworkforce-app-server-protocol = { path = "../agiworkforce-app-server-protocol" }
serde = { version = "1", features = ["derive"] }
urlencoding = "2.1"

[dev-dependencies]
pretty_assertions = "1.4.1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
