[package]
edition = "2024"

name = "agiworkforce-core-plugins"
version = "0.1.0"

[lib]
doctest = false
name = "agiworkforce_core_plugins"
path = "src/lib.rs"

[dependencies]
agiworkforce-app-server-protocol = { path = "../agiworkforce-app-server-protocol" }
agiworkforce-config = { path = "../agiworkforce-config" }
agiworkforce-core-skills = { path = "../agiworkforce-core-skills" }
agiworkforce-exec-server = { path = "../agiworkforce-exec-server" }
agiworkforce-git-utils = { path = "../agiworkforce-git-utils" }
agiworkforce-login = { path = "../agiworkforce-login" }
agiworkforce-model-provider = { path = "../agiworkforce-model-provider" }
agiworkforce-otel = { path = "../agiworkforce-otel" }
agiworkforce-plugin = { path = "../agiworkforce-plugin" }
agiworkforce-protocol = { path = "../agiworkforce-protocol" }
agiworkforce-utils-absolute-path = { path = "../agiworkforce-utils-absolute-path" }
agiworkforce-utils-plugins = { path = "../agiworkforce-utils-plugins" }
chrono = "0.4.43"
dirs = "6"
flate2 = "1.1.8"
reqwest = { version = "0.12", features = ["cookies"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tar = { version = "=0.4.45", default-features = false }
tempfile = "3.23.0"
thiserror = "2.0.17"
tokio = { version = "1", features = ["fs", "macros", "rt", "time"] }
toml = "0.9.5"
tracing = "0.1.44"
url = "2"
zip = "2.4.2"

[dev-dependencies]
anyhow = "1"
libc = "0.2.182"
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
wiremock = "0.6"
