[package]
edition = "2024"

name = "agiworkforce-core-skills"
version = "0.1.0"

[lib]
doctest = false
name = "agiworkforce_core_skills"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
agiworkforce-analytics = { path = "../agiworkforce-analytics" }
agiworkforce-app-server-protocol = { path = "../agiworkforce-app-server-protocol" }
agiworkforce-config = { path = "../agiworkforce-config" }
agiworkforce-exec-server = { path = "../agiworkforce-exec-server" }
agiworkforce-login = { path = "../agiworkforce-login" }
agiworkforce-model-provider = { path = "../agiworkforce-model-provider" }
agiworkforce-otel = { path = "../agiworkforce-otel" }
agiworkforce-protocol = { path = "../agiworkforce-protocol" }
agiworkforce-skills = { path = "../agiworkforce-skills" }
agiworkforce-utils-absolute-path = { path = "../agiworkforce-utils-absolute-path" }
agiworkforce-utils-output-truncation = { path = "../agiworkforce-utils-output-truncation" }
agiworkforce-utils-plugins = { path = "../agiworkforce-utils-plugins" }
dirs = "6"
dunce = "1.0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
shlex = "1.3.0"
tokio = { version = "1", features = ["fs", "macros", "rt"] }
toml = "0.9.5"
tracing = "0.1.44"
zip = "2.4.2"

[dev-dependencies]
pretty_assertions = "1.4.1"
tempfile = "3.23.0"
